edition = "2023";

option go_package = "github.com/vadicheck/shorturl/internal/proto/v1/models";

package internal.proto.v1.models;

message BatchFullUrl {
  string correlation_id = 1;
  string original_url = 2;
}

message BatchShortUrl {
  string correlation_id = 1;
  string short_url = 2;
}
